--- a/AppBanco/app/src/main/res/values/strings.xml
+++ b/AppBanco/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AppBanco</string>
-    <string-array name="spinner_items">
+    <string-array name="spinner_items_pruebas">
         <item>Item 1</item>
         <item>Item 2</item>
         <item>Item 3</item>
